--- a/.github/workflows/pull_to_master.yml
+++ b/.github/workflows/pull_to_master.yml
@@ -1,6 +1,6 @@
 name: CI for pull request
 on:
-  push:
+  pull_request:
    branches:
      - main
 jobs:
@@ -17,8 +17,3 @@ jobs:
         flutter-version: '3.10.6'
     - run: flutter pub get
     - run: flutter test
-    - run: flutter build apk
-    - uses: actions/upload-artifact@v1
-      with: 
-        name: release-apk
-        path: build/app/outputs/apk/release/app-release.apk
